--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MARSExploration">
-        <activity android:name=".NoteAditor"></activity>
+        <activity android:name=".SatelliteActivity" />
+        <activity android:name=".NoteAditor" />
         <activity android:name=".Notes" />
         <activity android:name=".Activity2" />
         <activity android:name=".PdfActivity" />
