--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,12 +8,14 @@
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/newicon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/newicon"
         android:supportsRtl="true"
         android:theme="@style/Theme.MARSExploration">
-        <activity android:name=".ActivitySat"></activity>
+        <activity android:name=".ActivityLander" />
+        <activity android:name=".ActivitySat" />
+        <activity android:name=".LanderActivity"/>
         <activity android:name=".SatelliteActivity" />
         <activity android:name=".NoteAditor" />
         <activity android:name=".Notes" />
