--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,13 +6,15 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+
         android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/newicon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/newicon"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MARSExploration">
+        android:theme="@style/Theme.MARSExploration"
+        android:exported="true">
         <activity android:name=".ActivityLander" />
         <activity android:name=".ActivitySat" />
         <activity android:name=".LanderActivity"/>
@@ -21,7 +23,9 @@
         <activity android:name=".Notes" />
         <activity android:name=".Activity2" />
         <activity android:name=".PdfActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
